cluster-go/applications/devspaces-multi-apps/python/python-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/joelapatatechaude/devfile-sample-python-basic
    isFromDevfile: "true"
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: python-basic
    app.kubernetes.io/component: python-basic
    app.kubernetes.io/instance: python-basic
    app.kubernetes.io/name: python-basic
    app.kubernetes.io/part-of: python-basic-app
    app.openshift.io/runtime: python-basic
  name: python-basic
  namespace: multi-apps
spec:
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: python-basic
    deployment: python-basic
  sessionAffinity: None
  type: ClusterIP
